# Files_archiver

./: CMakeLists.txt  CMakePresets.json  README.md  Task.txt  vcpkg.json
Files_archiver/: CMakeLists.txt  Files_archiver.cpp  Files_archiver.h  ProcessingData.cpp  ProcessingaData.h  TQueue.cpp  TQueue.h
